testdata/baselines/reference/submodule/compiler/checkJsObjectLiteralHasCheckedKeyof.errors.txt
file.js(8,11): error TS8010: Type annotations can only be used in TypeScript files.
file.js(11,1): error TS2322: Type '"z"' is not assignable to type '"x" | "y"'.


==== file.js (2 errors) ====
    // @ts-check
    const obj = {
        x: 1,
        y: 2
    };
    
    /**
     * @type {keyof typeof obj}
              ~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    let selected = "x";
    selected = "z"; // should fail
    ~~~~~~~~
!!! error TS2322: Type '"z"' is not assignable to type '"x" | "y"'.
    